# linux-api-rs

./: .gitignore  .travis.yml  Cargo.toml  README  README.md
lib/linux-api-exit/: Cargo.toml
lib/linux-api-exit/src/: lib.rs
lib/linux-api-math/: Cargo.toml
lib/linux-api-math/src/: lib.rs
lib/linux-api-semaphore/: Cargo.toml
lib/linux-api-sys/: Cargo.toml
lib/linux-api-sys/src/: lib.rs
lib/time-sys/: Cargo.toml
lib/time-sys/src/: lib.rs
src/: cstdlib.rs  errno.rs  ipc.rs  lib.rs  posix_types.rs  sem.rs  time.rs  unistd.rs
src/unistd/: common.rs  lib.rs  x86.rs
