[package]
name = "linux-api"
version = "0.0.4"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "Parent crate for programmer-friendly Linux API bindings. Global types are defined here, more specific ones can be found in each additional crate"

repository = "https://github.com/Techern/linux-api-rs"

readme = "README.md"

keywords = ["Linux", "kernel", "uapi"]

license = "MIT"

[dev-dependencies]

time-sys = { version = "*", path = "lib/time-sys" }
linux-api-sys = { version = "*", path = "lib/linux-api-sys" }
linux-api-exit = { version = "*", path = "lib/linux-api-exit" }