[package]
name = "linux-api"
version = "0.0.5"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "Types and constants for Linux API bindings. Actual bindings can be found in additional crates found in dev-dependencies"

repository = "https://github.com/Techern/linux-api-rs"

readme = "README.md"

keywords = ["Linux", "kernel", "uapi"]

license = "MIT"

[dev-dependencies]

time-sys = { version = "*", path = "lib/time-sys" }
linux-api-exit = { version = "*", path = "lib/linux-api-exit" }
linux-api-math = { version = "*", path = "lib/linux-api-math" }
linux-api-sys = { version = "*", path = "lib/linux-api-sys" }