[package]
name = "linux-api-exit"
version = "0.0.0"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "(Not yet working) Bindings to kernel/exit.c"

repository = "https://github.com/Techern/linux-api-rs"

keywords = ["Linux", "kernel"]

license = "MIT"

[dependencies]
linux-api = { version = ">= 0.0.4", path = "../.." } # Just require 0.0.3

[dev-dependencies]

#Nothing yet