[package]
name = "linux-api-math"
version = "0.0.1"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "Low-level bindings to libm"

repository = "https://github.com/Techern/linux-api-rs"

keywords = ["Linux", "kernel", "uapi", "math"]

license = "MIT"

[dependencies]
linux-api = { version = ">= 0.0.5", path = "../.." }

[dev-dependencies]

#Nothing yet