[package]
name = "linux-api-semaphore"
version = "0.0.0"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "(Not yet working) Low-level bindings to semaphore functions"

repository = "https://github.com/Techern/linux-api-rs"

keywords = ["Linux", "kernel", "uapi"]

license = "MIT"

[dependencies]
linux-api = { version = ">= 0.0.5", path = "../.." }

[dev-dependencies]

#Nothing yet