[package]
name = "linux-api-sys"
version = "0.0.0"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "(Not yet working) Bindings to kernel/sys.c"

repository = "https://github.com/Techern/linux-api-rs"

keywords = ["Linux", "kernel"]

license = "MIT"

[dependencies]
linux-api = { version = ">= 0.0.3", path = "../.." } # 0.0.4 or 0.0.5 should suffice once it is released

[dev-dependencies]

#Nothing yet