[package]
name = "linux-api-sys"
version = "0.0.0"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "(Not yet working) Bindings to kernel/sys.c"

repository = "https://github.com/Techern/linux-api-rs"

keywords = ["Linux", "kernel"]

license = "MIT"

[dependencies]
linux-api = { version = ">= 0.0.4", path = "../.." } # 0.0.4 or should suffice for now

[dev-dependencies]

#Nothing yet