[package]
name = "time-sys"
version = "0.0.1"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "Bindings to Linux's time.h and time64.h. Some functions have been replicated, but more are still to come."

repository = "https://github.com/Techern/linux-api-rs"

keywords = ["Linux", "kernel", "uapi", "time", "time64"]

license = "MIT"

[dependencies]
linux-api = { version = ">= 0.0.2", path = "../.." } # 0.0.2 should suffice once it is released

[dev-dependencies]

#Nothing yet